sdk/src/snapshots/touchportal_sdk__tests__category_validation_empty_category.snap
---
source: sdk/src/lib.rs
expression: result.unwrap_err()
---
category 'empty_cat' is empty - categories must contain at least one action, event, connector, or state
