sdk/src/snapshots/touchportal_sdk__tests__event_state_validation_choice_mismatch.snap
---
source: sdk/src/lib.rs
expression: error_msg
---
event mismatched_event references state mismatched_state, but they have diverging choice-sets
