sdk/src/snapshots/touchportal_sdk__tests__event_state_validation_nonexistent_state.snap
---
source: sdk/src/lib.rs
expression: error_msg
---
event test_event references unknown state nonexistent_state
