sdk/src/snapshots/touchportal_sdk__tests__event_state_validation_type_mismatch.snap
---
source: sdk/src/lib.rs
expression: error_msg
---
event choice_event is of choice type, but references state text_state which is of free-text type
