sdk/src/snapshots/touchportal_sdk__tests__plugin_validation_duplicate_action_ids.snap
---
source: sdk/src/lib.rs
expression: error_msg
---
duplicate action ID 'duplicate_action' found - action IDs must be unique across all categories
