sdk/src/snapshots/touchportal_sdk__tests__plugin_validation_invalid_plugin_id.snap
---
source: sdk/src/lib.rs
expression: error_msg
---
invalid plugin ID 'com.test.invalid@plugin#id!' - plugin IDs must contain only alphanumeric characters, dots, hyphens, and underscores
